--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ body, html {
 }
 
 .bgimg {
-  background-image: url('/images/forestbridge.jpg');
+  background-image: url('images/forestbridge.jpg');
   height: 100%;
   background-position: center;
   background-size: cover;
@@ -49,7 +49,7 @@ hr {
     <p></p>
   </div>
   <div class="middle">
-    <h1>EN CONSTRUCCIÓN</h1>
+    <h1>COMING SOON</h1>
     <hr>
   </div>
   <div class="bottomleft">
